# claude-sdk-rs

./: Cargo.toml  TESTING.md
.github/workflows/: compatibility-monitoring.yml  coverage.yml  performance.yml  release.yml
examples/: cli_analytics.rs
src/: lib.rs
src/cli/: cli_simple_test.rs
src/cli/analytics/: dashboard_cache.rs  dashboard_tests.rs  memory_optimizer.rs  optimized_dashboard.rs  performance_baseline_test.rs  performance_fixes.rs  performance_improvement_test.rs  performance_optimizations.rs  performance_profiler.rs  time_series_optimizer.rs
src/cli/cli/: commands.rs
src/cli/cost/: tracker.rs
src/cli/execution/: parallel.rs  runner.rs
src/cli/output/: formatter.rs
src/cli/profiling/: profiler.rs
src/cli/session/: manager.rs  mod.rs  storage.rs
src/mcp/clients/services/: error_handling.rs
src/runtime/: recovery.rs
tests/cli/: analytics_integration_test.rs  cli_integration_test.rs  execution_tests.rs  integration_test.rs  metrics_test_standalone.rs  module_integration_test.rs  simple_integration_test.rs
