[package]
name = "claude-sdk-rs"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/bredmond1019/claude-sdk-rust"
homepage = "https://github.com/bredmond1019/claude-sdk-rust"
documentation = "https://docs.rs/claude-sdk-rs"
authors = ["Brandon Redmond <brandon@github.com>"]
description = "Rust SDK for Claude AI with CLI integration - type-safe async API for Claude Code and direct SDK usage"
keywords = ["claude", "anthropic", "ai", "sdk", "async"]
categories = ["api-bindings", "command-line-utilities"]
readme = "README.md"


[dependencies]
# Core dependencies (always available)
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
bytes = "1.7"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Runtime dependencies  
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
url = "2.5"
which = "6.0"
parking_lot = "0.12"
rand = "0.8"
once_cell = "1.19"
num_cpus = "1.16"
libc = "0.2"

# Core optional dependencies
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }

# MCP dependencies (optional)
tokio-util = { version = "0.7", features = ["codec"], optional = true }
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
base64 = { version = "0.22", optional = true }
prometheus = { version = "0.14", optional = true }

# CLI dependencies (optional)
clap = { version = "4.5", features = ["derive", "env"], optional = true }
clap_complete = { version = "4.5", optional = true }
directories = { version = "5.0", optional = true }
dirs = { version = "5.0", optional = true }
colored = { version = "2.1", optional = true }
anyhow = { version = "1.0", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
notify = { version = "6.1", optional = true }
prettytable-rs = { version = "0.10", optional = true }
tempfile = { version = "3.10", optional = true }
toml = { version = "0.8", optional = true }
lru = { version = "0.12", optional = true }
sysinfo = { version = "0.37", optional = true }

[dev-dependencies]
proptest = "1.5"
insta = "1.40"
wiremock = "0.6"
dotenvy = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = []

# Storage features
sqlite = ["dep:sqlx"]

# MCP features
mcp = [
    "dep:tokio-util",
    "dep:futures-util", 
    "dep:tokio-tungstenite",
    "dep:base64",
    "dep:prometheus"
]

# CLI features
cli = [
    "dep:clap",
    "dep:clap_complete",
    "dep:directories",
    "dep:dirs",
    "dep:colored",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:notify",
    "dep:prettytable-rs",
    "dep:tempfile",
    "dep:toml",
    "dep:lru",
    "dep:sysinfo"
]

# Analytics feature (part of CLI)
analytics = ["cli"]

# All features enabled
full = ["cli", "analytics", "mcp", "sqlite"]

# Binary for CLI
[[bin]]
name = "claude-sdk-rs"
path = "src/bin/claude-sdk-rs.rs"
required-features = ["cli"]

# Benchmarks
[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"

[package.metadata.docs.rs]
features = ["cli"]
rustdoc-args = ["--cfg", "docsrs"]